# rustic-python

./: .env  Cargo.toml  LICENSE  migrations
hello-world/: Cargo.toml
hello-world/src/: main.rs
python-flask-sqlalchemy/: Makefile  main.py  requirements.txt  test.sh
rust-actix-diesel/: .env  .gitignore  Cargo.toml
rust-actix-diesel/migrations/2020-03-23-213121_create_gifs_table/: down.sql  up.sql
rust-actix-diesel/src/: main.rs  models.rs  schema.rs  state.rs
tests/: test.sh
