[package]
name = "rust-actix-diesel"
version = "0.1.0"
authors = ["Elijah Voigt <evoigt@cloudboltsoftware.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9"
actix-web = "2.0"
actix-rt = "1.0"
dotenv = "0.15"
diesel_migrations = "1.4"
serde = "*"
r2d2 = "*"

[dependencies.diesel]
version = "1.4.3"
features = ["sqlite", "r2d2"]
